# GP

./: BidingCode.cpp  CMakeCache.txt  CMakeLists.txt  DeliveryBoy_DeliverAngleFromPi2Arduino.py  Makefile  Master  Master.cpp  Moving_Angle_For_Motor.cpp  README  README.md  RunServo  ServoFN  ServoFN.py  btn_off.py  cmake_install.cmake  facedetect  facedetect.cpp  facedetect_runservo  facedetect_runservo.cpp  main  main.cpp  master  open2cams.cpp  open2cams.txt  playsound.py
FinalMoveMotor/: README
HelloWavV1/: HelloWavV1.cbp  StitcherCode.cpp  main.cpp
MoveMotor/: MoveMotor.ino
